# trader-bot

./: .gitignore  README.md  TODO  ecosystem.config.mjs
backend/: .env.example  .gitignore  environment.yml  main.py  pyproject.toml
backend/auction/: __init__.py  auction.py  auction_manager.py
backend/dtos/: admin_dto.py  auction_dto.py  base_dto.py  lol_stat_dto.py  position_dto.py  preset_dto.py  preset_user_dto.py  preset_user_position_dto.py  user_dto.py  val_stat_dto.py
backend/entities/: __init__.py  lol_stat.py  position.py  preset.py  preset_user.py  preset_user_position.py  tier.py
backend/routers/: __init__.py  admin_router.py  auction_websocket_router.py  position_router.py  preset_router.py  preset_user_position_router.py  preset_user_router.py  tier_router.py  user_router.py  val_stat_router.py
backend/services/: admin_service.py  auction_service.py  auction_websocket_service.py  lol_stat_service.py  position_service.py  preset_user_position_service.py  preset_user_service.py  tier_service.py  user_service.py  val_stat_service.py
backend/utils/: auth.py  database.py  env.py  exception.py  jwt.py  s3.py
python/: .env.example  .gitignore  alembic.ini  ecosystem.config.mjs  pyproject.toml
python/alembic/: env.py  script.py.mako
python/alembic/versions/: 41e6b9d89995_v0_5_0a1.py  648288991eae_v0_5_0a0.py  6edf87b2fbdc_v0_5_0a0.py  98d2449808d5_v0_5_3a0.py  a3f7c1b82e04_v0_5_3a1.py  cf1ac2f93fb3_v0_5_0a0.py  e22cd2ff29ed_v0_5_3a2.py
python/api/: main.py
python/api/auction/: __init__.py  auction.py  auction_manager.py
python/api/routers/: __init__.py  auction_router.py  auction_websocket_router.py  auction_ws_router.py  auth_router.py  guild_router.py  member_router.py  position_router.py  preset_member_position_router.py  preset_member_router.py  preset_router.py  tier_router.py  user_router.py
python/api/services/: auction_service.py  auction_websocket_service.py  auction_ws_service.py  auth_service.py  guild_service.py  member_service.py  position_service.py  preset_member_position_service.py  preset_member_service.py  preset_service.py  tier_service.py  user_service.py
python/api/utils/: discord.py  exception.py  member.py  token.py
python/auction/: auction.py  auction_manager.py  auction_repository.py  main.py  manager.py  repository.py  scripts.py  utils.py  worker.py
python/auction/scripts/: __init__.py  next_player.lua  place_bid.lua  publish_leader.lua  publish_member_sold.lua  publish_member_unsold.lua  publish_status.lua  publish_tick.lua
python/aws/amazon-cloudwatch-agent.d/: amazon-cloudwatch-agent.json  trader-bot-prod-lg-bot.json
python/backend/: main.py  subscription_manager.py
python/backend/auction/: __init__.py  auction.py  auction_manager.py  auction_repository.py  redis.py  utils.py
python/backend/dtos/: auction_dto.py  position_dto.py  preset_dto.py  preset_user_dto.py  preset_user_position_dto.py  tier_dto.py  user_dto.py
python/backend/entities/: lol_stat.py  tier.py  user.py  val_stat.py
python/backend/routers/: __init__.py  admin_router.py  auction_router.py  auction_websocket_router.py  auth_router.py  billing_router.py  guild_manager_router.py  guild_router.py  lol_stat_router.py  manager_router.py  member_router.py  payment_router.py  position_router.py  preset_member_position_router.py  preset_member_router.py  tier_router.py  (+7 more)
python/bot/: main.py  router.py  service.py  utils.py
python/crawler/: .env.example  __init__.py  crawler.py  environment.yml  main.py  utils.py
python/shared/: __init__.py  database.py  decorator.py  env.py  error.py  log.py
python/test/: dummy_entity.py  dummy_token.py  token.py  upsert_guild.py  upsert_member.py  upsert_test_entity.py  upsert_user.py
(+1261 files in other folders)
