[project]
name = "trader-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "loguru",
    "sqlalchemy[asyncio]",
    "pydantic",
    "python-dotenv",
    "pyjwt",
    "discord.py",
    "httpx",
    "asyncpg",
    "aioboto3",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
respect-gitignore = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"shared/entities/__init__.py" = ["E402"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10
