[project]
name = "trader-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "loguru",
    "sqlalchemy[asyncio]",
    "pydantic",
    "python-dotenv",
    "pyjwt",
    "discord.py",
    "httpx",
    "asyncpg",
    "aioboto3",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"shared/entities/__init__.py" = ["E402"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10
